--- a/SchiffeVersenken.css
+++ b/SchiffeVersenken.css
@@ -1,3 +1,5 @@
+
+
 .SchiffeVersenken #gameboardHome {
     width: 50vmin;
     height: 50vmin;
@@ -6,6 +8,14 @@
     gap: 0;
   }
   
+  .SchiffeVersenken #gameboardEnemy {
+    width: 50vmin;
+    height: 50vmin;
+    display: grid;
+    grid-template-columns: repeat(11, 1fr);
+    gap: 0;
+  }
+
   .SchiffeVersenken button {
     width:5vmin;
     height: 5vmin;
@@ -15,6 +25,10 @@
     font-weight: bold;
   } 
   
+  .SchiffeVersenken [aria-label="y"] {
+    background: gray
+  }
+
   .SchiffeVersenken [aria-label="x"] {
     background-image: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%201%201%22%3E%3Cline%20x1%3D%220.1%22%20y1%3D%220.1%22%20x2%3D%220.9%22%20y2%3D%220.9%22%20stroke-width%3D%220.1%22%20stroke%3D%22red%22%2F%3E%3Cline%20x1%3D%220.1%22%20y1%3D%220.9%22%20x2%3D%220.9%22%20y2%3D%220.1%22%20stroke-width%3D%220.1%22%20stroke%3D%22red%22%2F%3E%3C%2Fsvg%3E');
   }
